feat: add db service with initial tables
